--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.3
   skeletonizer: ^1.4.3
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
