--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bloc: ^9.0.0
   build_runner: ^2.4.7
   cached_network_image: ^3.3.1
+  crypto: ^3.0.6
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.3.3
@@ -39,6 +40,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_dotenv: ^5.2.1
+  flutter_inappwebview: ^6.1.5
   flutter_launcher_icons: ^0.14.3
   flutter_localization: ^0.3.1
   flutter_localizations:
@@ -55,13 +58,9 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.3
   skeletonizer: ^1.4.3
+  webview_flutter: ^4.12.0
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
@@ -80,6 +79,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
