--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   get_it: ^7.6.4
   internet_connection_checker: ^3.0.1
   intl: ^0.19.0
+  intl_utils: ^2.8.10
   logger: ^2.5.0
   pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.3
@@ -74,6 +75,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
